--- a/css/loading.css
+++ b/css/loading.css
@@ -11,7 +11,7 @@ body:before {
 	width:100%;
 	height:100%;
 	background:#0a0a0a;
-	background-image: url('https://www.reddit.com/media?url=https%3A%2F%2Fpreview.redd.it%2Fthe-deal-cyoa-banner-v0-t4g7xgrtuihe1.jpg%3Fwidth%3D3200%26format%3Dpjpg%26auto%3Dwebp%26s%3D8298e1c186c2d6f1350e4c9c8b7606bb80ef3c65');
+	background-image: url('https://preview.redd.it/the-deal-cyoa-banner-v0-t4g7xgrtuihe1.jpg?width=3200&format=pjpg&auto=webp&s=8298e1c186c2d6f1350e4c9c8b7606bb80ef3c65');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
